--- a/Engine/pom.xml
+++ b/Engine/pom.xml
@@ -12,10 +12,15 @@
 		<java.version>8</java.version>
 		<spring-cloud.version>2020.0.1</spring-cloud.version>
 	</properties>
-	<dependencies>
+	<dependencies> 
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.75</version>
+		</dependency> 
 		<dependency>
 			<groupId>com.chen</groupId>
-			<artifactId>Common</artifactId> 
+			<artifactId>Common</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
